--- a/src/sass/content.sass
+++ b/src/sass/content.sass
@@ -354,7 +354,7 @@
    border: none
    cursor: pointer
    position: relative
-   transition: all 0.5s ease
+   transition: all 0.7s ease
    font-weight: 600
    font-size: 18px
    line-height: 20px
@@ -378,7 +378,7 @@
    transition: all 0.5s ease
 .accordeon__button.active 
    border-radius: 10px 10px 0px 0 
-   border-bottom: none
+   border-bottom: 1px solid transparent
 .accordeon__button.active:after 
    content: ""
    position: absolute
@@ -389,12 +389,12 @@
    height: 28px
    bottom: 39%
    margin-bottom: -20px
-   transition: all 0.5s ease
+   transition: all 0.7s ease
 .accordeon__panel 
    max-height: 0
    overflow: hidden
    margin-left: 0
-   transition: all 0.5s ease
+   transition: all 0.7s ease
 .panel__text 
    list-style-type: none
    padding-top: 0px
