--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -1,6 +1,8 @@
 @media screen and (min-width: 1920px) 
    .main-right
       max-width: 100%
+   // .body-wrap
+   //    zoom: 80%
 @media screen and (max-width: 1700px) 
    .main__content 
       max-width: 1146px
@@ -161,11 +163,12 @@
    .main-left__create
       margin: 40px auto
    .main-left__list 
-      align-items: center
+      align-items: flex-start
       margin: 0 auto
       justify-content: center
       display: flex
       flex-direction: column
+      width: max-content
    .mm 
       width: max-content
       margin: 0 auto
